--- a/hfjksdfsd.html
+++ b/hfjksdfsd.html
@@ -91,14 +91,14 @@
 </head>
 <body>
     <header>
-        <h1>MIJN PORTFOLIO!!!</h1>
+        <h1>WAT EEN KUT SITE</h1>
         <p class="lead">DE BESTE, HELAAS NIET LEESBARE SITE</p>
     </header>
 
     <marquee behavior="scroll" direction="left">🔥| CHECK MIJN PROJECTEN |🔥 - NIET AAN TE RADEN VOOR MENSEN MET GEVOELIGHEID |🔥</marquee>
 
     <div class="section">
-        <h2>Over Mij</h2>
+        <h2>FUCK JOU</h2>
         <p class="tiny">KLEINE TEKST (ONZICHTBAAR)</p>
         <p>Ik ben een webdeveloper die expres de slechtste kleurcombinaties gebruikt en animaties toevoegt die je ogen breken.</p>
         <p class="rotate">ROTATED</p>
