--- a/hfjksdfsd.html
+++ b/hfjksdfsd.html
@@ -125,7 +125,7 @@
     </div>
 
     <footer>
-        <p>Contact: <a href="#">KLIK HIER!!!</a></p>
+        <p>Contact: <a href="#">KLIK HIER VOOR MEER PORNO!!!</a></p>
         <p style="font-size:12px; color:#39FF14;">DISCLAIMER: ALS JE EEN KLEURBLINDHEID HEBT, ZWAAI NAAR DE MONITOR</p>
     </footer>
 
